--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: #0747a6;
+    background-image: url("https://unsplash.com/photos/GSQISzQlYtY");
   }
   .container {
     max-width: 400px;
